--- a/css/default.css
+++ b/css/default.css
@@ -11,6 +11,7 @@ a {
   padding: 10px 15px;
   text-decoration: none;
 }
+
 .img-header {
   width: 350px;
   height: auto;
@@ -154,6 +155,14 @@ a {
   flex-wrap: wrap;
   padding: 40px 20px;
   gap: 8px 15px;
+}
+
+.img-footer {
+  width: 100px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttonFooter {
